Added favicon and fixed title

--- a/artwork.html
+++ b/artwork.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Final Project - Flint Inc. - Christofer Alvin - Bibliography</title>
+    <title>Individual Final Project - Flint Inc. - Christofer Alvin - Artwork</title>
 
     <!-- CSS Stuff -->
     <link rel="stylesheet" href="css/style.css">
@@ -11,6 +11,9 @@
     <!-- Font Stuff -->
     <!-- Quicksand for Content and Josefin Sands for Title-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Quicksand&display=swap" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/familycrestdarken.svg">
 
 </head>
 
