--- a/bibliography.html
+++ b/bibliography.html
@@ -12,6 +12,9 @@
     <!-- Quicksand for Content and Josefin Sands for Title-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Quicksand&display=swap" rel="stylesheet">
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/familycrestdarken.svg">
+    
 </head>
 
 <body>
