Fixed image that is not linked properly

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <!-- Image -->
                 <div class="container_image_padding">
                     <div class="container_image_item">
-                        <img src="images/BunchbalHumanDesires.PNG" alt="">
+                        <img src="images/BunchbalHumanDesires.png" alt="">
                     </div>
                     <div class="container_image_description">
                         <p>Figure 1: Human Desires and Game Mechanics Chart (Bunchball, cited by Wu 2023)</p>
@@ -114,7 +114,7 @@
 
                 <div class="container_image_padding">
                     <div class="container_image_item">
-                        <img src="images/GenshinImpactChildeP1.PNG" alt="">
+                        <img src="images/GenshinImpactChildeP1.png" alt="">
                     </div>
                     <div class="container_image_description">
                         <p>Figure 2: Genshin’s Gacha mechanics Part 1 (Hoyoverse. 2022)</p>
@@ -123,7 +123,7 @@
 
                 <div class="container_image_padding">
                     <div class="container_image_item">
-                        <img src="images/GenshinImpactChildeP2.PNG" alt="">
+                        <img src="images/GenshinImpactChildeP2.png" alt="">
                     </div>
                     <div class="container_image_description">
                         <p>Figure 3: Genshin’s Gacha mechanics Part 2 (Hoyoverse. 2022)</p>
@@ -183,7 +183,7 @@
                 <!-- Image -->
                 <div class="container_image_padding">
                     <div class="container_image_item">
-                        <img src="images/DraftandFinal.PNG" alt="">
+                        <img src="images/DraftandFinal.png" alt="">
                     </div>
                     <div class="container_image_description">
                         <p>Figure 4: Draft Designs (Left) and Final Designs (Right)</p>
@@ -192,7 +192,7 @@
                 
                 <div class="container_image_padding">
                     <div class="container_image_item">
-                        <img src="images/BehindTheScenes.PNG" alt="">
+                        <img src="images/BehindTheScenes.png" alt="">
                     </div>
                     <div class="container_image_description">
                         <p>Figure 5: Behind the Scenes</p>
