--- a/artwork.html
+++ b/artwork.html
@@ -25,13 +25,36 @@
                 <a href="index.html"><img src="images/familycrest.svg" alt=""></a>
             </div>
             <div class="header_navbar_shortcut">
-                <a href="#"><h2 >ARTWORK</h2></a>
+                <a href="artwork.html">
+                    <h2 a="artwork.html">ARTWORK</h2>
+                </a>
             </div>
             <div class="header_navbar_shortcut">
-                <a href="bibliography.html"><h2>BIBLIOGRAPHY</h2></a>
+                <a href="bibliography.html">
+                    <h2>BIBLIOGRAPHY</h2>
+                </a>
+            </div>
+            <div class="header_navbar_shortcut_hamburger" onclick="dropDownInfo()" ;>
+                <a>
+                    <h2>MENU</h2>
+                </a>
             </div>
         </div>
     </div>
+    
+    <div class="header_dropdown" id="navActive">
+        <div class="header_dropdown_shortcut">
+            <a href="artwork.html">
+                <h2>ARTWORK</h2>
+            </a>
+        </div>
+        <div class="header_dropdown_shortcut">
+            <a href="bibliography.html">
+                <h2>BIBLIOGRAPHY</h2>
+            </a>
+        </div>
+    </div>
+
 
     <!-- Header -->
     <div class="background_compact" style="background-image: url('images/BackgroundHeaderCompact.png')">
@@ -40,7 +63,7 @@
                 <h2>FLINT INC.</h2>
             </div>
             <div class="background_compact_title_subtitle">
-                <p>Individual Final Project Documentation - Artwork</p>
+                <p>Artwork</p>
             </div>
         </div>
         <div class="background_compact_image">
@@ -93,6 +116,23 @@
     <div class="footer">
         <p>Christofer Alvin - 2023</p>
     </div>
+
+    <!-- Dropdown -->
+    <script>
+        function dropDownInfo() {
+            var navBar = document.getElementById("navActive");
+            var navBarStyle = getComputedStyle(navBar);
+            if (navBarStyle.getPropertyValue('visibility') == "hidden") {
+                navBar.style.visibility = 'visible';
+                navBar.style.opacity = 1;
+                console.log(navBarStyle.getPropertyValue('visibility'));
+            } else {
+                navBar.style.visibility = 'hidden';
+                navBar.style.opacity = 0;
+            }
+        }
+
+    </script>
 
 </body>
 
