Updated missing bibliography and additional clarification

--- a/bibliography.html
+++ b/bibliography.html
@@ -83,26 +83,36 @@
                 <u>https://eds.p.ebscohost.com/eds/pdfviewer/pdfviewer?vid=1&sid=08844aed-e1e4-4fd7-b090-1efc359ab61b%40redis</u> [Accessed on
                 20 February 2023]
                 <br><br>
+                Faranello, S. (2016). <i>Practical UX Design. Birmingham, UK: Packt Publishing (Community Experience Distilled)</i>. Available
+                from:
+                https://search.ebscohost.com/login.aspx?direct=true&AuthType=sso,cpid&custid=ns000798&db=e000xww&AN=1228515&site=eds-live&scope=site
+                [accessed on 26 October 2022]
+                <br><br>
                 Hasriandry and Wahyuni. (2021). Understanding Online Game Addiction Based on Motivation, Narcisstic Personality Traits,
-                Self-Control and Social Self-Efficacy. In: <i>2021 9th International Conference on Cyber and IT Service Management (CITSM),
-                Bengkulu, Indonesia </i>[online]. pp. 1-6, Available from: <u>https://ieeexplore.ieee.org/document/9588976?arnumber=9588976</u>
+                Self-Control and Social Self-Efficacy. In: <i>2021 9th International Conference on Cyber and IT Service Management
+                (CITSM),Bengkulu, Indonesia </i>[online]. pp. 1-6, Available from:
+                <u>https://ieeexplore.ieee.org/document/9588976?arnumber=9588976</u>
                 [Accessed on February 20 2023]
                 <br><br>
-                Koeder M. J. and Tanaka E. (2017). Game of chance elements in free-to-play mobile games. A freemium business model
+                Hoyoverse. (2022). <i>Genshin Impact</i> (Version 3.1) [accessed on 26 October 2022]
+                <br><br>
+                Koeder, M. J. and Tanaka, E. (2017). Game of chance elements in free-to-play mobile games. A freemium business model
                 monetization tool in need of self- regulation?, In: <i>28th European Regional Conference of the International
                 Telecommunications Society (ITS): "Competition and Regulation in the Information Age", 30th July - 2nd August, 2017,
                 Passau, Germany </i>[online], Available from: <u>https://www.econstor.eu/bitstream/10419/169473/1/Koeder-Tanaka.pdf</u> [accessed
                 on 26 October 2022]
                 <br><br>
-                Kramarzewski A. and Nucci E. D. (2018) <i>Practical Game Design: Learn the Art of Game Design Through Applicable Skills and
+                Kramarzewski, A. and Nucci, E. D. (2018) <i>Practical Game Design: Learn the Art of Game Design Through Applicable Skills and
                 Cutting-edge Insights </i>. Birmingham, UK: Packt Publishing. Available from:
                 <u>https://search.ebscohost.com/login.aspx?direct=true&AuthType=sso,cpid&custid=ns000798&db=e000xww&AN=1795478&site=eds-live&scope=site</u>
                 [accessed on 26 October 2022]
                 <br><br>
-                Quijano J. and Kapell M. W. (2019). <i>The Composition of Video Games: Narrative, Aesthetics, Rhetoric and Play</i>. Jefferson,
+                Quijano, J. and Kapell, M. W. (2019). <i>The Composition of Video Games: Narrative, Aesthetics, Rhetoric and Play</i>. Jefferson,
                 North Carolina: McFarland (Studies in Gaming). Available from:
                 <u>https://search.ebscohost.com/login.aspx?direct=true&AuthType=sso,cpid&custid=ns000798&db=e000xww&AN=2271970&site=eds-live&scope=site</u>
                 [accessed on 26 October 2022]
+                <br><br>
+                Norman, D. (1999), <i>The Design of Everyday Things</i>. London: The MIT Press.
                 <br><br>
                 Schell, J. (2008). <i>The Art of Game Design: A Book of Lenses</i>. 1st ed. London: CRC Press LLC. Available from:
                 <u>https://search.ebscohost.com/login.aspx?direct=true&AuthType=sso,cpid&custid=ns000798&db=cat05651a&AN=itd.58564&site=eds-live&scope=site</u>
@@ -112,20 +122,19 @@
                 Mechanics on Young Mobile Social Game Players in Japan. <i>Simulation & Gaming</i> [online], 50(1), 76–92. Available from:
                 <u>https://doi.org/10.1177/1046878118819677</u> [accessed on 26 October 2022]
                 <br><br>
-                Stuart K. (2011). <i>The seduction secrets of video game designers</i>[online]. Available from:
+                Stuart, K. (2011). <i>The seduction secrets of video game designers</i>[online]. Available from:
                 <u>https://www.theguardian.com/technology/2011/may/15/video-game-design-psychology</u> [accessed on 26 October 2022]
                 <br><br>
-                Totilo S. (2019). <i>You Can Now Read The Proposed Senate Bill That Would Ban Loot Boxed In Games Kids Like [UPDATE]</i>
+                Totilo, S. (2019). <i>You Can Now Read The Proposed Senate Bill That Would Ban Loot Boxed In Games Kids Like [UPDATE]</i>
                 [online]. Available from: <u>https://kotaku.com/you-can-now-read-the-proposed-senate-bill-that-would-ba-1834983260</u>
                 [Accessed on November 10 2022]
                 <br><br>
-                Wu M. (2023). <i>Game Mechanics, Incentives & Recognition</i> [online]. Available from:
+                Wu, M. (2023). <i>Game Mechanics, Incentives & Recognition</i> [online]. Available from:
                 <u>https://theirf.org/research_post/game-mechanics-incentives-recognition/</u> [Accessed on February 19 2023]
                 <br><br>
-                Yulai D. (2020). <i>Exploring motivations for virtual rewards in online F2P Gachagames: Considering income level,
+                Yulai, D. (2020). <i>Exploring motivations for virtual rewards in online F2P Gachagames: Considering income level,
                 consumption habits and game settings</i> [online]. Bachelor Thesis. Wenzhou-Kean University, Available from:<u>
                 https://wkuwire.org/bitstream/20.500.12540/399/1/wku_etd001_cbpm01_000371.pdf</u> [accessed on 26 October 2022]
-
                 </p>
             </div>
 
