--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <!-- Content -->
                 <h2>RESEARCH</h2>
                 <p>In this project, game addiction was defined as “excessive and compulsive use of computer and video games that results in
-                social and/or emotional problems” (Lemmens, Valkenburg, and Peter, cited by Chang and Kim 2020).
+                social and/or emotional problems” (Lemmens et al. 2009 cited by Chang et al. 2020).
                 <br><br>
                 Hasriandry and Wahyuni (2021) suggested various factors that may lead to game addiction. Players that are more prone to
                 being addicted to video games include, players with motivation to play for escapism and achievement, players with lower
@@ -111,19 +111,21 @@
                 The current researcher suggested that flow state is one of the reasons video games can be addicting.
                 <br><br>
                 A field of research that is relevant to this project is gamification. Bunchball through Wu (2023) provided a useful
-                table that groups video game mechanics with human desire that it fulfills. (See Figure 1)
+                table that groups video game mechanics with human desire that it fulfills (see Figure 1).
                 <br><br>
                 A game mechanic that the current researcher wanted to make people aware is gacha, a game mechanic that can be argued to
                 introduce gambling addiction. Gacha is a game mechanic where player spends in-game or real-world currency for a chance
                 to obtain certain items which may introduce new mechanics into their game. The current researcher suggested that gacha
                 can be perceived as “lootboxes” or “suprise bags”. Gacha mechanic is used in many freemium video games as it is
                 profitable. (Spicemart 2016 cited by Koeder et al. 2017). Moreover, research on gacha that can be purchased for a
-                limited time suggested that it may cause players to spend more money (six months later). (Shibuya 2019).
+                limited time suggested that it may cause players to spend more money (six months later) (Shibuya 2019).
                 <br><br>
                 Other than research into video game addiction, gamification and gacha mechanics, the current researcher researched UI
-                and UX good practices such as The Design of Everyday Things (Norman 1988), 10 Principles of a Good Design by Dieter Raum
+                and UX good practices such as The Design of Everyday Things (Norman 1988*), 10 Principles of a Good Design by Dieter Raum
                 (Faranello 2016), The 15 Fundamental Properties of Wholeness by Christopher Alexander (Farenello 2016) and Gutenberg
-                Principle (Karamerzewski et al. 2018). These practices are implemented to the UI mock-up.</p>
+                Principle (Kramarzewski et al. 2018). These practices are implemented to the UI mock-up.</p>
+                <br>
+                <span class="smallerFont"><p>*Norman's book was originally published on 1988, the book the researcher read is the reprinting on 1999.</p></span>
             </div>
     
             <div class="container_image">
@@ -133,7 +135,7 @@
                         <img src="images/BunchbalHumanDesires.png" alt="">
                     </div>
                     <div class="container_image_description">
-                        <p>Figure 1: Human Desires and Game Mechanics Chart (Bunchball, cited by Wu 2023)</p>
+                        <p>Figure 1: Human Desires and Game Mechanics Chart (Bunchball cited by Wu 2023)</p>
                     </div>
                 </div>
 
@@ -142,7 +144,7 @@
                         <img src="images/GenshinImpactChildeP1.png" alt="">
                     </div>
                     <div class="container_image_description">
-                        <p>Figure 2: Genshin’s Gacha mechanics Part 1 (Hoyoverse. 2022)</p>
+                        <p>Figure 2: Genshin’s Gacha mechanics Part 1 (Hoyoverse 2022)</p>
                     </div>
                 </div>
 
@@ -151,7 +153,7 @@
                         <img src="images/GenshinImpactChildeP2.png" alt="">
                     </div>
                     <div class="container_image_description">
-                        <p>Figure 3: Genshin’s Gacha mechanics Part 2 (Hoyoverse. 2022)</p>
+                        <p>Figure 3: Genshin’s Gacha mechanics Part 2 (Hoyoverse 2022)</p>
                     </div>
                 </div>
 
@@ -197,7 +199,7 @@
                 <br><br>
                 <b>Achievement</b>
                 <br>
-                Adding achievements to the game adds goals for players to do short-term or long term. Achievement is an attempt to
+                Adding achievements to the game adds goals for players to do short-term or long-term. Achievement is an attempt to
                 fulfill the human needs to challenges and this may make players addicted to the game.
                 <br><br>
                 See more artworks and desings in the <u><a href="artwork.html">ARTWORK</a></u> page.
