Added current in a sentence for clarity

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 (Faranello 2016), The 15 Fundamental Properties of Wholeness by Christopher Alexander (Farenello 2016) and Gutenberg
                 Principle (Kramarzewski et al. 2018). These practices are implemented to the UI mock-up.</p>
                 <br>
-                <span class="smallerFont"><p>*Norman's book was originally published on 1988, the book the researcher read is the reprinting on 1999.</p></span>
+                <span class="smallerFont"><p>*Norman's book was originally published on 1988, the book the current researcher read is the reprinting on 1999.</p></span>
             </div>
     
             <div class="container_image">
