Added new artworks, added progression, creative process and alternative iterations

--- a/artwork.html
+++ b/artwork.html
@@ -106,6 +106,38 @@
                         <p>Figure 3: Character Artwork for (Left to Right) Assassin, Defender, Rusher</p>
                     </div>
                 </div>
+
+                <!-- Image -->
+                <div class="container_image_padding">
+                    <div class="container_image_item">
+                        <img src="images/Logos.png" alt="">
+                    </div>
+                    <div class="container_image_description">
+                        <p>Figure 4: Icons</p>
+                    </div>
+                </div>
+                
+                <!-- Image -->
+                <div class="container_image_padding">
+                    <div class="container_image_item">
+                        <img src="images/IconPrototypes.png" alt="">
+                    </div>
+                    <div class="container_image_description">
+                        <p>Figure 5: Icons Prototype Sketches</p>
+                    </div>
+                </div>
+
+                <!-- Image -->
+                <div class="container_image_padding">
+                    <div class="container_image_item">
+                        <img src="images/GameplayLoopUIEarly.png" alt="">
+                    </div>
+                    <div class="container_image_description">
+                        <p>Figure 6: Early Gameplay Loop and Sitemap, UI Layout Heavily Inspired by Arknights</p>
+                    </div>
+                </div>
+                </div>
+                
                 </div>
             </div>
 
